# shark-2.0

./: .gitmodules  CMakeLists.txt  README.md  compile.txt  compile_flags.txt  poker_gui  tree.json
.github/workflows/: ci.yml  new_ci.yml
gui/: gui  gui.cpp
gui/components/: CardButton.cpp  CardButton.hh  Page1_Settings.cpp  Page1_Settings.hh  Page2_Board.cpp  Page2_Board.hh  Page3_HeroRange.cpp  Page3_HeroRange.hh  Page4_VillainRange.cpp  Page4_VillainRange.hh  Page5_Progress.cpp  Page6_Strategy.cpp  Page6_Strategy.hh
gui/utils/: Colors.hh  RangeData.hh
include/omp/: EquityCalculator.hh  Random.h  json.hpp  libdivide.h
src/: Helper.hh  State.hh  main.cpp
src/game/: Action.hh  Game.hh  State.hh
src/hands/: Card.hh  PreflopCombo.hh  PreflopRange.cpp  PreflopRange.hh  PreflopRangeManager.cpp  PreflopRangeManager.hh  RiverCombo.hh  RiverRangeManager.cpp  RiverRangeManager.hh
src/solver/: BestResponse.cpp  BestResponse.hh  CFRHelper.cpp  ParallelDCFR.cpp  Solver.cpp  Solver.hh  cfr.txt  old.txt
src/trainer/: DCFR.cpp  DCFR.hh
src/tree/: GameTree.cpp  GameTree.hh  Nodes.hh  TreeBuilderSettings.hh
testing/: game_tree.cpp
